--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -45,12 +45,29 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     container: ghcr.io/railwayapp/cli:latest
+    # env:
+    #   # SVC_ID: my-service-id
+    #   SVC_ID: ${{ vars.RAILWAY_SVC_ID }}
+    #   RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+    # needs: build
+    # steps:
+    #   # - uses: actions/checkout@v3
+    #   - uses: actions/checkout@v4
+    #   - run: railway up --service=$SVC_ID
+
     env:
-      # SVC_ID: my-service-id
-      SVC_ID: ${{ vars.RAILWAY_SVC_ID }}
       RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-    needs: build
+      SVC_ID: ${{ vars.RAILWAY_SVC_ID }}
+      PROJECT_ID: ${{ vars.RAILWAY_PROJECT_ID }}
+
     steps:
-      # - uses: actions/checkout@v3
       - uses: actions/checkout@v4
-      - run: railway up --service=$SVC_ID
+
+      - name: Link Railway Project
+        run: railway link $PROJECT_ID
+
+      - name: Debug Railway Status
+        run: railway status
+
+      - name: Deploy to Railway
+        run: railway up --service=$SVC_ID
