--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -49,7 +49,7 @@ jobs:
     #   # SVC_ID: my-service-id
     #   SVC_ID: ${{ vars.RAILWAY_SVC_ID }}
     #   RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-    # needs: build
+    needs: build
     # steps:
     #   # - uses: actions/checkout@v3
     #   - uses: actions/checkout@v4
@@ -58,16 +58,19 @@ jobs:
     env:
       RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
       SVC_ID: ${{ vars.RAILWAY_SVC_ID }}
-      PROJECT_ID: ${{ vars.RAILWAY_PROJECT_ID }}
+      # PROJECT_ID: ${{ vars.RAILWAY_PROJECT_ID }}
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Link Railway Project
-        run: railway link $PROJECT_ID
+      # - name: Link Railway Project
+      #   run: railway link $PROJECT_ID
 
-      - name: Debug Railway Status
-        run: railway status
+      # - name: Debug Railway Status
+      #   run: railway status
 
-      - name: Deploy to Railway
-        run: railway up --service=$SVC_ID
+      # - name: Deploy to Railway
+      #   run: railway up --service=$SVC_ID
+
+      - name: Redeploy in Railway
+        run: railway redeploy --service=$SVC_ID
