--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -45,21 +45,11 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     container: ghcr.io/railwayapp/cli:latest
-    # env:
-    #   # SVC_ID: my-service-id
-    #   SVC_ID: ${{ vars.RAILWAY_SVC_ID }}
-    #   RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
     needs: build
-    # steps:
-    #   # - uses: actions/checkout@v3
-    #   - uses: actions/checkout@v4
-    #   - run: railway up --service=$SVC_ID
-
     env:
       RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
       SVC_ID: ${{ vars.RAILWAY_SVC_ID }}
-      # PROJECT_ID: ${{ vars.RAILWAY_PROJECT_ID }}
-
+      PROJECT_ID: ${{ vars.RAILWAY_PROJECT_ID }}
     steps:
       - uses: actions/checkout@v4
 
@@ -73,4 +63,4 @@ jobs:
       #   run: railway up --service=$SVC_ID
 
       - name: Redeploy in Railway
-        run: railway redeploy --service=$SVC_ID
+        run: railway redeploy --service=$SVC_ID --ci
