--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -43,9 +43,9 @@ jobs:
           tags: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
 
   deploy:
+    needs: build
     runs-on: ubuntu-latest
     container: ghcr.io/railwayapp/cli:latest
-    needs: build
     env:
       RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
       SVC_ID: ${{ vars.RAILWAY_SVC_ID }}
@@ -59,8 +59,9 @@ jobs:
       # - name: Debug Railway Status
       #   run: railway status
 
-      # - name: Deploy to Railway
-      #   run: railway up --service=$SVC_ID
+      - name: Deploy to Railway
+        run: railway up --service=${{ env.SVC_ID }} --detach
+        # run: railway up --service=$SVC_ID
 
-      - name: Redeploy in Railway
-        run: railway redeploy --service=$SVC_ID --ci
+      # - name: Redeploy in Railway
+      #   run: railway redeploy --service=$SVC_ID
